Prevent aligned content in headings

--- a/themes/tsc_vfl/assets/css/main.scss
+++ b/themes/tsc_vfl/assets/css/main.scss
@@ -280,6 +280,10 @@ h1 {
                 max-width: 100%;
             }
 
+            h1, h2 h3, h4, h5, h6 {
+                text-align: left;
+            }
+
             .to-top {
                 margin: 45px 0 0;
             }
